wip - prompt engineering

--- a/notebooks/backtranslate_txt_output.ipynb
+++ b/notebooks/backtranslate_txt_output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,10 +20,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "backtranslate_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for row in backtranslate_df.sample(10).iter_rows(named=True):\n",
-    "    display(Markdown(f\"**{row['title']}**\"))\n",
+    "    display(Markdown(f\"#### Sample {row['title']}\"))\n",
     "    display(Markdown(row[\"paragraph\"]))\n",
-    "    display(Markdown(\"**Backtranslated Text**\"))\n",
+    "    display(Markdown(\"### Backtranslated Text\"))\n",
     "    display(Markdown(row[\"instruction\"]))\n",
     "    display(Markdown(\"-\" * 100))"
    ]
@@ -57,20 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(11831, 1)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "out.shape"
    ]
