revert to verifiers code

--- a/notebooks/grpo_trainer_dev.ipynb
+++ b/notebooks/grpo_trainer_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -20,9 +20,9 @@
     "sys.path.append(\"..\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from trl_wrapper.trainer_wrapper import TrainerWrapper, SMOL_LM_135M, SFT_MATH_CONFIG\n",
+    "from trl_wrapper.trainer_wrapper import TrainerWrapper, SMOL_LM_135M, GRPO_MATH_CONFIG\n",
     "\n",
-    "cfg = SFT_MATH_CONFIG\n",
+    "cfg = GRPO_MATH_CONFIG\n",
     "cfg.notebook_mode = True\n",
     "cfg.model_id_or_path = SMOL_LM_135M\n",
     "cfg.max_samples = 1000"
@@ -30,18 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-22 13:27:19.026\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m269\u001b[0m - \u001b[1mUsing device: mps\u001b[0m\n",
-      "\u001b[32m2025-03-22 13:27:19.026\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m283\u001b[0m - \u001b[1mLoading model HuggingFaceTB/SmolLM2-135M-Instruct with attn_impl: sdpa\u001b[0m\n",
-      "\u001b[32m2025-03-22 13:27:19.753\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_data_module\u001b[0m:\u001b[36m304\u001b[0m - \u001b[1mUsing dataset path: openai/gsm8k\u001b[0m\n",
-      "\u001b[32m2025-03-22 13:27:19.753\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_data_module\u001b[0m:\u001b[36m309\u001b[0m - \u001b[1mUsing chat template override: smollmv2\u001b[0m\n",
-      "\u001b[32m2025-03-22 13:27:19.754\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.wrapper_config\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m127\u001b[0m - \u001b[1mCache dir: ../dataset_caches/g_s_m8_k_data_module\u001b[0m\n"
+      "\u001b[32m2025-03-22 14:22:50.564\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m256\u001b[0m - \u001b[1mUsing device: mps\u001b[0m\n",
+      "\u001b[32m2025-03-22 14:22:50.565\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m270\u001b[0m - \u001b[1mLoading model HuggingFaceTB/SmolLM2-135M-Instruct with attn_impl: sdpa\u001b[0m\n",
+      "\u001b[32m2025-03-22 14:22:51.242\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_data_module\u001b[0m:\u001b[36m296\u001b[0m - \u001b[1mUsing chat template override: smollmv2\u001b[0m\n",
+      "\u001b[32m2025-03-22 14:22:51.243\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.wrapper_config\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m126\u001b[0m - \u001b[1mCache dir: ../dataset_caches/g_s_m8_k_data_module\u001b[0m\n",
+      "Map: 100%|██████████| 7473/7473 [00:00<00:00, 54413.99 examples/s]\n"
      ]
     }
    ],
@@ -53,18 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-22 13:27:24.353\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m346\u001b[0m - \u001b[1mSaving output to: ./runs/03-22-13-27-839672-smollm2-135m-instruct-\u001b[0m\n",
-      "\u001b[32m2025-03-22 13:27:24.354\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m369\u001b[0m - \u001b[1mInitializing trainer, run_name: 03-22-13-27-839672-smollm2-135m-instruct-, wandb project: qwen-math-sft\u001b[0m\n",
-      "\u001b[32m2025-03-22 13:27:24.355\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m440\u001b[0m - \u001b[1mUsing collator: <model.reasoning.ChatDataCollator object at 0x34303edd0>\u001b[0m\n",
-      "/Users/brianfitzgerald/Documents/GitHub/smolmodels/notebooks/../trl_wrapper/trainer_wrapper.py:442: FutureWarning: `tokenizer` is deprecated and removed starting from version 0.16.0 for `CustomSFTTrainer.__init__`. Use `processing_class` instead.\n",
-      "  \n"
+      "\u001b[32m2025-03-22 14:22:53.215\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m333\u001b[0m - \u001b[1mSaving output to: ./runs/03-22-14-22-882269-smollm2-135m-instruct-\u001b[0m\n",
+      "\u001b[32m2025-03-22 14:22:53.217\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m356\u001b[0m - \u001b[1mInitializing trainer, run_name: 03-22-14-22-882269-smollm2-135m-instruct-, wandb project: qwen-math-grpo\u001b[0m\n",
+      "\u001b[32m2025-03-22 14:22:53.217\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_trainer\u001b[0m:\u001b[36m441\u001b[0m - \u001b[1mUsing vllm: False\u001b[0m\n"
      ]
     }
    ],
@@ -76,7 +74,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-03-22 14:22:54.716\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36mtrain\u001b[0m:\u001b[36m609\u001b[0m - \u001b[1mStarting training.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "wrapper.train()"
    ]
