--- a/notebooks/connections_reward_dev.ipynb
+++ b/notebooks/connections_reward_dev.ipynb
@@ -2,44 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-03-26 20:52:59.935\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m266\u001b[0m - \u001b[1mSetting padding side to: left\u001b[0m\n",
-      "\u001b[32m2025-03-26 20:52:59.950\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.wrapper_config\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m133\u001b[0m - \u001b[1mCache dir: ../dataset_caches/connections_data_module\u001b[0m\n",
-      "Map: 100%|██████████| 353/353 [00:00<00:00, 15763.86 examples/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset({\n",
-      "    features: ['words', 'solution', 'prompt', 'answer'],\n",
-      "    num_rows: 317\n",
-      "})\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
@@ -57,25 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'content': '\\nYou are an expert puzzle solving model.\\nFind groups of words that are related to each other, and return the answer in the following format:\\nRespond in the following format:\\n<reasoning>\\n...\\n</reasoning>\\n<answer>\\n<group>\\n...\\n</group>\\n<group>\\n...\\n</group>\\n</answer>\\n\\n# Example\\n\\nUser: apple, orange, banana, pear, corolla, charger,\\nAssistant: <reasoning>\\nThe first group are all fruits.\\nThe second group are all cars.\\n</reasoning>\\n<answer>\\n<group>apple, orange, banana, pear</group>\\n<group>corolla, charger</group>\\n</answer>\\n\\n# Example\\n\\nUser: dog, cat, red, white,\\nAssistant: <reasoning>\\nThe first group are all animals.\\nThe second group are all colors.\\n</reasoning>\\n<answer>\\n<group>dog, cat</group>\\n<group>red, white</group>\\n</answer>\\n',\n",
-       "  'role': 'system'},\n",
-       " {'content': 'hawking, match, genius, feynman, crikey, moot, flair, barbie, west, oppenheimer, einstein, faculty, gift, bush, mate, selling',\n",
-       "  'role': 'user'},\n",
-       " {'role': 'assistant',\n",
-       "  'content': '<answer><group>faculty, flair, genius, gift</group>\\n<group>einstein, feynman, hawking, oppenheimer</group>\\n<group>barbie, bush, crikey, mate</group>\\n<group>match, moot, selling, west</group></answer>'}]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sample = data_module.train_dataset[0]\n",
     "# sample\n",
@@ -83,9 +32,52 @@
     "first_sample = wrapper.data_module.train_dataset[0]\n",
     "\n",
     "conv = first_sample['prompt']\n",
-    "fake_thoughts = \"<thought> First four are academic</thought> <thought> Last two are not academic</thought>\"\n",
-    "conv = [*conv, {'role': \"assistant\", 'content': first_sample['answer']}]\n",
-    "conv"
+    "fake_thoughts = \"<reasoning>\\nFirst four are academic\\n</reasoning>\\n\"\n",
+    "fake_response = {'role': \"assistant\", 'content': fake_thoughts + first_sample['answer'] + \"\\n\"}\n",
+    "# conv = [*conv, {'role': \"assistant\", 'content': first_sample['answer']}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<reasoning>\n",
+      "First four are academic\n",
+      "</reasoning>\n",
+      "<answer><group>appendix, chapter, index, preface</group>\n",
+      "<group>buzz, call, dial, ring</group>\n",
+      "<group>dinky, little, minute, slight</group>\n",
+      "<group>itchy, jerry, pinky, speedy</group></answer>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fake_response['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-03-26 21:42:29.328\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.reasoning\u001b[0m:\u001b[36mxmlcount_reward_func\u001b[0m:\u001b[36m59\u001b[0m - \u001b[1mXML count rewards: [0.25]\u001b[0m\n",
+      "\u001b[32m2025-03-26 21:42:29.329\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmodel.reasoning\u001b[0m:\u001b[36mstrict_format_reward_func\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mStrict format rewards: [0.0]\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "for reward_func in wrapper.data_module.reward_functions():\n",
+    "    rew = reward_func([conv], [[fake_response]])"
    ]
   }
  ],
